# temchenko_bot

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  ruff.toml
srs/: Dockerfile  bot.py
srs/alembic/: env.py
srs/alembic/versions/: 8897cffafa7c_init.py  88f9b0c7a502_init.py
srs/api/: api_v1.py  webhooks.py
srs/callbacks/: menu.py
srs/core/: bot_config.py  config.py  pay.py
srs/db/: crud.py  db_helper.py  models.py
srs/handlers/: new_member.py  start.py
srs/keyboards/: menu.py
srs/services/: menu_service.py  start_service.py  yookassa_service.py
srs/tasks/: main.py
srs/webhooks/: aprove_payment.py
